--- a/hr_fingerprint_ams/i18n/id.po
+++ b/hr_fingerprint_ams/i18n/id.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0-20160525\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-30 06:21+0000\n"
-"PO-Revision-Date: 2017-03-30 13:45+0700\n"
+"POT-Creation-Date: 2017-05-02 04:41+0000\n"
+"PO-Revision-Date: 2017-05-02 11:44+0700\n"
 "Last-Translator: Odoo <cayadi.sutanto@palmagroup.co.id>\n"
 "Language-Team: palma group\n"
 "Language: en\n"
@@ -24,7 +24,13 @@ msgstr ""
 "X-Generator: Virtaal 0.7.1\n"
 
 #. module: hr_fingerprint_ams
-#: code:addons/hr_fingerprint_ams/models/fingerprint.py:325
+#: code:addons/hr_fingerprint_ams/models/fingerprint.py:327
+#, python-format
+msgid "%s approved fingerprint data at %s (server time)"
+msgstr "%s sidik jari disetujui pada %s (waktu server)"
+
+#. module: hr_fingerprint_ams
+#: code:addons/hr_fingerprint_ams/models/fingerprint.py:348
 #, python-format
 msgid "%s approved imported AMS fingerprint at %s (server time)"
 msgstr "%s menyetujui semua data impor fingerprint AMS pada %s (waktu server)"
@@ -59,6 +65,33 @@ msgstr ""
 "* PKWT, Perjanjian Kerja Waktu Tertentu."
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "<br/>\n"
+"                            <strong>Kebun</strong>:"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "<br/>\n"
+"                            <strong>Periode</strong>:"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "<cite>Tulis keterangan tambahan di sini</cite>"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "<strong>Keterangan</strong>"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "<strong>Perusahaan</strong>:"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_absent
 msgid "Absent"
 msgstr "Mangkir"
@@ -72,6 +105,11 @@ msgstr "Tipe Presensi"
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_action_reason_active
 msgid "Active"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Alasan"
 msgstr ""
 
 #. module: hr_fingerprint_ams
@@ -89,7 +127,13 @@ msgid "Approved"
 msgstr "Setuju"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Asisten"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_assistant_id
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_assistant_id
 #: model:ir.ui.view,arch_db:hr_fingerprint_ams.labour_fingerprint_view_search
 msgid "Assistant"
 msgstr "Asisten Divisi"
@@ -110,19 +154,40 @@ msgid "Attendance Hour"
 msgstr "Jam Kehadiran"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.menu,name:hr_fingerprint_ams.attendance_report_menu
+msgid "Attendance Reports"
+msgstr "Laporan Kehadiran"
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_auto_assign
 msgid "Auto Assign"
 msgstr "Jam Otomatis"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Belum Terdaftar"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Beri tanda pada kolom Alasan sebagai keterangan sidik jari."
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.upkeep_fingerprint_wizard
+msgid "Cancel"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_company_id
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_company_id
+msgid "Company"
+msgstr "Perusahaan"
+
+#. module: hr_fingerprint_ams
 #: selection:estate.hr.attendance,fingerprint:0
 msgid "Complete"
 msgstr "Lengkap"
-
-#. module: hr_fingerprint_ams
-#: model:ir.actions.server,name:hr_fingerprint_ams.action_hr_fingerprint_confirm
-msgid "Confirm All"
-msgstr "Konfirmasi Semua"
 
 #. module: hr_fingerprint_ams
 #: selection:hr_fingerprint_ams.attendance,state:0
@@ -151,11 +216,13 @@ msgstr "Koreksi"
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_create_uid
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_create_uid
 msgid "Created by"
 msgstr "Dibuat oleh"
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_create_date
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_create_date
 msgid "Created on"
 msgstr "Dibuat pada"
 
@@ -179,10 +246,22 @@ msgid "Department"
 msgstr "Departemen"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Dinas Luar"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_display_name
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_display_name
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_display_name
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_report_hr_fingerprint_ams_report_upkeep_fingerprint_display_name
 msgid "Display Name"
 msgstr "Nama Lengkap"
+
+#. module: hr_fingerprint_ams
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_division_id
+msgid "Division"
+msgstr "Divisi"
 
 #. module: hr_fingerprint_ams
 #: selection:hr_fingerprint_ams.attendance,state:0
@@ -215,11 +294,33 @@ msgid "Employee Name"
 msgstr "Nama Karyawan"
 
 #. module: hr_fingerprint_ams
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_date_end
+msgid "End Date"
+msgstr "Tanggal Akhir"
+
+#. module: hr_fingerprint_ams
+#: code:addons/hr_fingerprint_ams/wizard/fingerprint_transient.py:102
+#, python-format
+msgid "End Date cannot be set before Start Date."
+msgstr "Tanggal Akhir harus setelah Tanggal Awal"
+
+#. module: hr_fingerprint_ams
 #: constraint:hr.attendance:0
 msgid "Error ! Sign in (resp. Sign out) must follow Sign out (resp. Sign in)"
 msgstr ""
 "Error ! Sidik jari masuk (atau keluar) harus setelah sidik jari keluar (atau "
 "masuk)"
+
+#. module: hr_fingerprint_ams
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_estate_id
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_estate_id
+msgid "Estate"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Estate Manager"
+msgstr ""
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_day_finger
@@ -272,9 +373,19 @@ msgid "Group By"
 msgstr "Pengelompokan"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "HK BKM"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_attendance_ids
 msgid "HR Attendance"
 msgstr "Kehadiran"
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "HR GA Assistant"
+msgstr ""
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_day_holiday
@@ -287,8 +398,15 @@ msgid "Holiday Work Hour"
 msgstr "Jam Kerja Hari Libur"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Hujan"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_id
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_id
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_id
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_report_hr_fingerprint_ams_report_upkeep_fingerprint_id
 msgid "ID"
 msgstr "ID"
 
@@ -311,6 +429,26 @@ msgid "Included time rest"
 msgstr "Termasuk jam istirahat"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Izin"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "KHL"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "KTU"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Kemandoran"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model,name:hr_fingerprint_ams.model_hr_fingerprint_ams_fingerprint
 msgid "Labour Fingerprint"
 msgstr "Sidik Jari"
@@ -322,18 +460,27 @@ msgid "Labour Fingerprint Report"
 msgstr "Kontrol HK & Sidik Jari"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Laporan Kontrol HK dan Sidik jari"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance___last_update
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint___last_update
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print___last_update
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_report_hr_fingerprint_ams_report_upkeep_fingerprint___last_update
 msgid "Last Modified on"
 msgstr "Modifikasi terakhir pada"
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_write_uid
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_write_uid
 msgid "Last Updated by"
 msgstr "Update terakhir oleh"
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_write_date
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_write_date
 msgid "Last Updated on"
 msgstr "Update terakhir pada"
 
@@ -343,7 +490,23 @@ msgid "Late In"
 msgstr "Terlambat Masuk"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Membuat"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Mengetahui"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Menyetujui"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: selection:hr.action.reason,contract_period:0
+#: selection:hr_fingerprint_ams.fingerprint.print,period:0
 msgid "Monthly"
 msgstr "Bulanan"
 
@@ -412,6 +575,11 @@ msgid "Payslip"
 msgstr "Payslip"
 
 #. module: hr_fingerprint_ams
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_period
+msgid "Period"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_estate_hr_attendance_piece_rate
 msgid "Piece Rate Day"
 msgstr "Premi Pengganti HK"
@@ -431,6 +599,11 @@ msgid "Previous Week"
 msgstr "Minggu Lalu"
 
 #. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.upkeep_fingerprint_wizard
+msgid "Print"
+msgstr ""
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_required_in
 msgid "Required Sign In"
 msgstr "Harus Sign In"
@@ -446,15 +619,41 @@ msgid "Row Name"
 msgstr "Baris"
 
 #. module: hr_fingerprint_ams
-#: code:addons/hr_fingerprint_ams/models/fingerprint.py:317
-#, python-format
-msgid "Selected records is not a confirmed data."
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Sakit"
 msgstr ""
 
 #. module: hr_fingerprint_ams
+#: selection:hr_fingerprint_ams.fingerprint.print,period:0
+msgid "Select Dates"
+msgstr "Pilih Tanggal"
+
+#. module: hr_fingerprint_ams
+#: model:ir.model.fields,help:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_period
+msgid "Select period of activities to be displayed at report."
+msgstr "Pilih periode pekerjaan yang akan ditampilkan pada laporan."
+
+#. module: hr_fingerprint_ams
+#: code:addons/hr_fingerprint_ams/models/fingerprint.py:340
+#, python-format
+msgid "Selected records is not a confirmed data."
+msgstr "Data belum diperiksa (konfirmasi)."
+
+#. module: hr_fingerprint_ams
 #: code:addons/hr_fingerprint_ams/models/fingerprint.py:296
+#: code:addons/hr_fingerprint_ams/models/fingerprint.py:316
 #, python-format
 msgid "Selected records is not a draft data."
+msgstr "Data bukan draft."
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Sidik Jari Masuk"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Sidik Jari Pulang"
 msgstr ""
 
 #. module: hr_fingerprint_ams
@@ -477,11 +676,21 @@ msgid "Single"
 msgstr "Salah Satu"
 
 #. module: hr_fingerprint_ams
+#: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_print_date_start
+msgid "Start Date"
+msgstr "Tanggal Awal"
+
+#. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_attendance_state
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_state
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_state
 msgid "State"
 msgstr "State"
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.report_upkeep_fingerprint
+msgid "Tanggal"
+msgstr ""
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_fingerprint_team_id
@@ -523,6 +732,24 @@ msgid "Time format in hh:mm"
 msgstr "Format waktu hh:mm"
 
 #. module: hr_fingerprint_ams
+#: selection:hr_fingerprint_ams.fingerprint.print,period:0
+msgid "Today"
+msgstr "Hari Ini"
+
+#. module: hr_fingerprint_ams
+#: model:ir.actions.report.xml,name:hr_fingerprint_ams.upkeep_fingerprint_report_action
+#: model:ir.ui.menu,name:hr_fingerprint_ams.estate_upkeep_fingerprint_report_menu
+#: model:ir.ui.menu,name:hr_fingerprint_ams.upkeep_fingerprint_report_menu
+msgid "Upkeep Fingerprint Report"
+msgstr "Kontrol HK & Sidik Jari"
+
+#. module: hr_fingerprint_ams
+#: model:ir.actions.act_window,name:hr_fingerprint_ams.upkeep_fingerprint_report_wizard_action
+#: model:ir.model,name:hr_fingerprint_ams.model_hr_fingerprint_ams_fingerprint_print
+msgid "Upkeep Fingerprint Wizard"
+msgstr "Kontrol HK & Sidik Jari"
+
+#. module: hr_fingerprint_ams
 #: model:ir.model,name:hr_fingerprint_ams.model_estate_upkeep_labour
 msgid "Upkeep Labour"
 msgstr "Tenaga Kerja"
@@ -541,6 +768,11 @@ msgstr "Hari Kerja Akhir Minggu"
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_hour_ot_weekend
 msgid "Weekend Work Hour"
 msgstr "Jam Kerja Akhir Minggu"
+
+#. module: hr_fingerprint_ams
+#: selection:hr_fingerprint_ams.fingerprint.print,period:0
+msgid "Weekly"
+msgstr "Mingguan"
 
 #. module: hr_fingerprint_ams
 #: model:ir.model.fields,field_description:hr_fingerprint_ams.field_hr_fingerprint_ams_attendance_hour_work
@@ -579,7 +811,13 @@ msgid "Yes"
 msgstr "Ada"
 
 #. module: hr_fingerprint_ams
-#: code:addons/hr_fingerprint_ams/models/fingerprint.py:312
+#: code:addons/hr_fingerprint_ams/models/fingerprint.py:311
+#, python-format
+msgid "You are not authorized to approve all fingerprint data"
+msgstr "Anda tidak memiliki hak Setujui Semua"
+
+#. module: hr_fingerprint_ams
+#: code:addons/hr_fingerprint_ams/models/fingerprint.py:335
 #, python-format
 msgid "You are not authorized to approve all fingerprint imported data"
 msgstr "Anda tidak memiliki hak Setujui Semua"
@@ -600,6 +838,19 @@ msgstr "Tidak boleh menghapus data fingprint yang telah disetujui."
 #: model:ir.model,name:hr_fingerprint_ams.model_estate_hr_attendance
 msgid "estate.hr.attendance"
 msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.ui.view,arch_db:hr_fingerprint_ams.upkeep_fingerprint_wizard
+msgid "or"
+msgstr ""
+
+#. module: hr_fingerprint_ams
+#: model:ir.model,name:hr_fingerprint_ams.model_report_hr_fingerprint_ams_report_upkeep_fingerprint
+msgid "report.hr_fingerprint_ams.report_upkeep_fingerprint"
+msgstr ""
+
+#~ msgid "Confirm All"
+#~ msgstr "Konfirmasi Semua"
 
 #~ msgid "Compare number of day with fingerprint."
 #~ msgstr "Membandingkan jumlah HK dg presensi sidik jari"
